--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="profile">
-        <img src="/assets/profile.svg" alt="" />
+        <img src="./assets/profile.svg" alt="" />
       </div>
       <p class="username">@Jane Doe</p>
 
